--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-zoom-pan-pinch": "^3.6.1",
     "reactjs-popup": "^2.0.6",
     "tailwindcss": "^4.0.0"
   },
